--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,35 @@
-version: '2'
+version: '3'
 services:
   web:
-    build: .
-    ports:
-      - "5000:5000"
-    env_file: vol/.env
-    depends_on:
-      - db
+    restart: always
+    build: ./web
+    expose:
+      - "8000"
     volumes:
-      - ./vol:/vol
-  db:
+      - ./web:/vol
+    env_file: .env
+    command: /usr/local/bin/gunicorn -w 2 -b :8000 app:app
+
+  nginx:
+    restart: always
+    build: ./nginx/
+    ports:
+      - "80:80"
+    volumes:
+      - ./web/app/static:/www/static
+
+  data:
     image: postgres:latest
+    volumes:
+      - data-volume:/var/lib/postgresql
+
+  postgres:
+    restart: always
+    image: postgres:latest
+    volumes:
+      - data-volume:/var/lib/postgresql
     ports:
       - "5432:5432"
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
+
+volumes:
+  data-volume:
