--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Set the environment type of the app (see config.py)
 APP_SETTINGS=config.DevelopmentConfig
 SECRET_KEY=th7764secreklau009
-DB_NAME=amazen
-DB_USER=jc2375
-DB_PASS=amazengracehowsweetthesound
+DB_NAME=app_db
+DB_USER=4300user
+DB_PASS=joohoisagod123
 DB_SERVICE=postgres
 DB_PORT=5432
