--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -18,6 +18,11 @@ services:
     volumes:
       - ./web/app/static:/www/static
 
+  data:
+    image: postgres:latest
+    volumes:
+      - data-volume:/var/lib/postgresql
+
   postgres:
     restart: always
     image: postgres:latest
@@ -26,12 +31,6 @@ services:
     ports:
       - "5432:5432"
     env_file: .db_env
-
-  gulper:
-    restart: always
-    build: ./gulper
-    volumes:
-      - ./web:/runtime/src
 
 volumes:
   data-volume:
