--- a/gulper/package.json
+++ b/gulper/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "cs4300",
+  "name": "gulper",
   "version": "1.0.0",
-  "description": "Amazen",
-  "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^8.0.31",
-    "babelify": "^6.4.0",
     "babel-preset-es2015": "latest",
+    "browserify": "latest",
+    "gulp": "latest",
+    "gulp-babel": "latest",
+    "gulp-notify": "latest",
+    "gulp-util": "latest",
+    "gulp-watch": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "vinyl-buffer": "latest",
+    "vinyl-source-stream": "latest",
     "babel-preset-react": "latest",
-    "bower": "^1.8.2",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-browser": "^2.1.9",
-    "gulp-size": "^2.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "babel-core": "latest",
+    "babel-preset-stage-3": "latest",
+    "babelify": "7.2.0"
+  }
 }
