--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -21,13 +21,13 @@ services:
   data:
     image: postgres:latest
     volumes:
-      - data-volume:/var/lib/postgresql
+      - data-volume:/var/lib/postgresql/data
 
   postgres:
     restart: always
     image: postgres:latest
     volumes:
-      - data-volume:/var/lib/postgresql
+      - data-volume:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     env_file: .db_env
