--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./web:/vol
     env_file: .env
-    command: /usr/local/bin/gunicorn --reload -w 2 -b :8000 app:app
+    command: /usr/local/bin/gunicorn --reload -w 2 -b :8000 app:app --log-level=debug
 
   nginx:
     restart: always
