--- a/gulper/package.json
+++ b/gulper/package.json
@@ -17,6 +17,7 @@
     "babel-core": "latest",
     "babel-preset-stage-3": "latest",
     "babelify": "7.2.0",
-    "prop-types": "15.6.1"
+    "prop-types": "15.6.1",
+    "axios": "0.18.0"
   }
 }
