--- a/gulper/package.json
+++ b/gulper/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-3": "latest",
     "babelify": "7.2.0",
     "prop-types": "15.6.1",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "react-popup": "latest"
   }
 }
