--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,14 @@ services:
     volumes:
       - ./web:/runtime/src
 
+  redis:
+    restart: always
+    image: redis:latest
+    volumes:
+      - ./redis-data:/data
+    command: redis-server --appendonly yes
+    ports:
+      - "6379:6379"
+
 volumes:
   data-volume:
