--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     image: redis:latest
     volumes:
       - ./redis-data:/data
-    command: redis-server --appendonly yes
+    command: redis-server
     ports:
       - "6379:6379"
 
