--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./web:/vol
     env_file: .env
-    command: /usr/local/bin/gunicorn --reload -w 2 -b :8000 app:app
+    command: /usr/local/bin/gunicorn --reload -w 4 -b :8000 app:app --log-level=debug
 
   nginx:
     restart: always
@@ -18,11 +18,6 @@ services:
     volumes:
       - ./web/app/static:/www/static
 
-  data:
-    image: postgres:latest
-    volumes:
-      - data-volume:/var/lib/postgresql/data
-
   postgres:
     restart: always
     image: postgres:latest
@@ -31,6 +26,15 @@ services:
     ports:
       - "5432:5432"
     env_file: .db_env
+
+  redis:
+    restart: always
+    image: redis:latest
+    volumes:
+      - ./redis-data:/mounting-data
+    command: redis-server --dbfilename dump.rdb --dir /mounting-data --save "" --appendonly no
+    ports:
+      - "6379:6379"
 
 volumes:
   data-volume:
