--- a/gulper/package.json
+++ b/gulper/package.json
@@ -19,6 +19,7 @@
     "babelify": "7.2.0",
     "prop-types": "15.6.1",
     "axios": "0.18.0",
-    "react-popup": "latest"
+    "react-popup": "latest",
+    "jw-react-pagination": "1.0.6"
   }
 }
