--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -23,8 +23,8 @@ services:
     image: postgres:latest
     volumes:
       - data-volume:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     env_file: .db_env
 
   redis:
@@ -33,8 +33,8 @@ services:
     volumes:
       - ./redis-data:/mounting-data
     command: redis-server --dbfilename dump.rdb --dir /mounting-data --save "" --appendonly no
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
 
 volumes:
   data-volume:
