--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     image: postgres:latest
     volumes:
       - data-volume:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     env_file: .db_env
 
   gulper:
@@ -39,8 +39,8 @@ services:
     volumes:
       - ./redis-data:/mounting-data
     command: redis-server --dbfilename dump.rdb --dir /mounting-data --save "" --appendonly no --requirepass stoptakingdownourr3d1s
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
 
 volumes:
   data-volume:
